# MesoriaCMakeBase

./: README.md
SFML/: CMakeLists.txt  README.md
SFML/cmake_modules/: FindSFML.cmake
